--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,7 @@ minecraft {
 
 dependencies {
     compile "li.cil.oc:OpenComputers:MC${config.minecraft.version}-${config.oc.version}:api"
-    compile files('libs/refinedstorage-1.2.4.jar')
-
+    compile files('libs/refinedstorage-1.2.5-api.jar')
 }
 
 processResources
@@ -63,7 +62,7 @@ processResources
         include 'mcmod.info'
                 
         // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        expand 'name':rootProject.name ,'version':project.version, 'mcversion':project.minecraft.version
     }
         
     // copy everything else, thats not the mcmod.info
